--- a/MyApplication_V1/app/src/main/res/layout/activity_game.xml
+++ b/MyApplication_V1/app/src/main/res/layout/activity_game.xml
@@ -3,35 +3,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/myLayout"
-    android:background="@drawable/bg_mappage"
-    >
-    <RelativeLayout android:layout_height="360dp"
-        android:layout_width="600dp" />
+    android:background="@drawable/bg_mappage">
 
+    <!--Button User Icon-->
     <Button
         android:id="@+id/userProfile"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="@dimen/map_icon_marginStart"
+        android:layout_marginTop="@dimen/map_icon_marginTop"
         android:background="@color/transparent"/>
 
+    <!--Button Fight-->
     <Button
         android:id="@+id/fight"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="@dimen/map_btnFight_width"
+        android:layout_height="@dimen/map_btnFight_height"
         android:layout_centerHorizontal="true"
         android:text="FIGHT"
-        android:textColor="@android:color/white"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"/>
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="@dimen/map_btnFight_marginEnd"
+        android:layout_marginBottom="@dimen/map_btnFight_marginBottom"/>
 
-
+    <!--TextView Distance-->
     <mangoabliu.finalproject.Layout.FontTextView
         android:id="@+id/distance"
         android:layout_width="wrap_content"
@@ -41,9 +39,10 @@
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
         android:text="0 Miles"
-        android:textSize="30dp"
-        android:textColor="@color/distance" />
+        android:textSize="@dimen/map_dist_textsize"
+        android:textColor="@color/clr_map_text" />
 
+    <!--Button StepTest-->
     <Button
         android:id="@+id/stepTest"
         android:layout_width="wrap_content"
@@ -51,59 +50,119 @@
         android:layout_alignParentBottom="true"
         android:text="step"/>
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
-        <Button
-            android:id="@+id/location1"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:background="#00000000"
-            android:layout_marginTop="120dp"
-            android:layout_marginLeft="95dp"/>
 
-        <Button
-            android:id="@+id/location2"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:background="#00000000"
-            android:layout_marginTop="200dp"
-            android:layout_marginLeft="207dp" />
+    <!--Planet Button Layout-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/location4"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:background="#00000000"
-            android:layout_marginTop="120dp"
-            android:layout_marginLeft="303dp"/>
+        <!--Planet Button Layout left1-->
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_weight="0.273"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="20dp">
+            <Button
+                android:id="@+id/location1"
+                android:layout_width="@dimen/map_btnLoc1_size"
+                android:layout_height="@dimen/map_btnLoc1_size"
+                android:background="@color/transparent"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"/>
 
-        <Button
-            android:id="@+id/location5"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:background="#00000000"
-            android:layout_marginTop="90dp"
-            android:layout_marginLeft="450dp"/>
+        </RelativeLayout>
 
-        <Button
-            android:id="@+id/location3"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="#00000000"
-            android:layout_marginTop="60dp"
-            android:layout_marginLeft="245dp"/>
+        <!--Planet Button Layout Left2-->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="0.239"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <Button
-            android:id="@+id/location6"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:background="#00000000"
-            android:layout_marginTop="233dp"
-            android:layout_marginLeft="402dp"/>
-    </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.463"
+                android:gravity="center_vertical">
+
+                <Button
+                    android:id="@+id/location3"
+                    android:layout_width="@dimen/map_btnLoc3_size"
+                    android:layout_height="@dimen/map_btnLoc3_size"
+                    android:background="@color/transparent"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="@dimen/map_R3_marginPadding"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.537"
+                android:gravity="center">
+                <Button
+                    android:id="@+id/location2"
+                    android:layout_width="@dimen/map_btnLoc2_size"
+                    android:layout_height="@dimen/map_btnLoc2_size"
+                    android:background="@color/transparent"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginBottom="@dimen/map_R2_marginBottom"/>
+            </RelativeLayout>
 
 
+
+        </LinearLayout>
+
+
+
+        <!--Planet Button Layout Right1-->
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_weight="0.154"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/map_R4_marginBottom">
+            <Button
+                android:id="@+id/location4"
+                android:layout_width="@dimen/map_btnLoc4_size"
+                android:layout_height="@dimen/map_btnLoc4_size"
+                android:background="@color/transparent"
+                android:layout_centerVertical="true"/>
+        </RelativeLayout>
+
+        <!--Planet Button Layout Right2-->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="0.333"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.676"
+                android:gravity="center"
+                android:layout_marginEnd="@dimen/map_R5_marginEnd">
+                <Button
+                    android:id="@+id/location5"
+                    android:layout_width="@dimen/map_btnLoc5_size"
+                    android:layout_height="@dimen/map_btnLoc5_size"
+                    android:background="@color/transparent" />
+
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.324">
+                <Button
+                    android:id="@+id/location6"
+                    android:layout_width="@dimen/map_btnLoc6_size"
+                    android:layout_height="@dimen/map_btnLoc6_size"
+                    android:background="@color/transparent"
+                    android:layout_margin="@dimen/map_R6_marginPadding"/>
+            </RelativeLayout>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
 </RelativeLayout>
