--- a/MyApplication_V1/app/src/main/res/values/colors.xml
+++ b/MyApplication_V1/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
     <color name="clr_register_text">#f2e3b4</color>
     <color name="clr_menu_text">#AFFF</color>
 
+    <!-- map -->
+    <color name="clr_map_text">#AA82d0d8</color>  //DARKER:#49858b
 
     <!-- clr for test-->
     <color name="clr_test">#FFFF</color>
