--- a/MyApplication_V1/app/src/main/res/values/dimens.xml
+++ b/MyApplication_V1/app/src/main/res/values/dimens.xml
@@ -31,6 +31,31 @@
     <dimen name="register_text_padding">2dp</dimen>
 
     <!-- activity_map -->
+    <dimen name="map_layout_width">600dp</dimen>
+    <dimen name="map_layout_height">360dp</dimen>
+    <dimen name="map_icon_marginTop">25dp</dimen>
+    <dimen name="map_icon_marginStart">20dp</dimen>
+    <dimen name="map_btnFight_width">60dp</dimen>
+    <dimen name="map_btnFight_height">60dp</dimen>
+    <dimen name="map_btnFight_marginEnd">20dp</dimen>
+    <dimen name="map_btnFight_marginBottom">20dp</dimen>
+    <dimen name="map_dist_textsize">30sp</dimen>
+
+    <dimen name="map_btnLoc1_size">70dp</dimen>
+    <dimen name="map_btnLoc2_size">55dp</dimen>
+    <dimen name="map_btnLoc3_size">40dp</dimen>
+    <dimen name="map_btnLoc4_size">60dp</dimen>
+    <dimen name="map_btnLoc5_size">55dp</dimen>
+    <dimen name="map_btnLoc6_size">55dp</dimen>
+
+    <dimen name="map_R1_marginBottom">20dp</dimen>
+    <dimen name="map_R2_marginBottom">40dp</dimen>
+    <dimen name="map_R3_marginPadding">10dp</dimen>
+    <dimen name="map_R4_marginBottom">30dp</dimen>
+    <dimen name="map_R5_marginEnd">20dp</dimen>
+    <dimen name="map_R5_marginTop">10dp</dimen>
+    <dimen name="map_R6_marginPadding">5dp</dimen>
+
 
 
     <!-- activity_gamepage -->
