--- a/MyApplication_V1/app/src/main/res/layout/activity_battle.xml
+++ b/MyApplication_V1/app/src/main/res/layout/activity_battle.xml
@@ -5,62 +5,83 @@
     android:background="@drawable/bg_gamepage">
 
 
-    <!-- Before loading -->
+    <!-- Before searching -->
     <RelativeLayout
+        android:id="@+id/rl_searching"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
-            android:id="@+id/img_battle_loadingup"
+            android:id="@+id/img_battle_searchingup"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/battle_loading_up"/>
+            android:background="@drawable/battle_searching_up"/>
         <ImageView
-            android:id="@+id/img_battle_loadingdown"
+            android:id="@+id/img_battle_searchingdown"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/battle_loading_down"/>
+            android:background="@drawable/battle_searching_down"/>
 
         <mangoabliu.finalproject.Layout.FontTextView
-            android:id="@+id/battle_loading"
+            android:id="@+id/battle_searching_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="@string/battle_loading_text"
-            android:textSize="@dimen/battle_loading_textsize"
+            android:text="@string/battle_searching_text"
+            android:textSize="@dimen/battle_searching_textsize"
             android:textColor="@color/clr_battle_text"/>
     </RelativeLayout>
 
 
-
-
-    <!-- After loading -->
-    <RelativeLayout
-        android:id="@+id/battle_afterloading"
+    <!-- Planet Icon -->
+    <ImageView
+        android:id="@+id/img_battle_planet"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ImageView
-            android:id="@+id/img_battle_planet"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/battle_planet"/>
+        android:layout_height="match_parent"
+        android:background="@drawable/battle_planet"/>
+
+    <!-- Test Button -->
+    <Button
+        android:id="@+id/btn_battle_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TEST"
+        android:textSize="20sp"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="20dp"/>
+
+    <!-- Exit Button -->
+    <Button
+        android:id="@+id/btn_battle_exit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="EXIT"
+        android:textSize="20sp"
+        android:layout_below="@+id/btn_battle_test"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="20dp"/>
+
+
+    <!-- After searching -->
+    <RelativeLayout
+        android:id="@+id/battle_start"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible">
         <ImageView
             android:id="@+id/img_battle_banner"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/battle_banner"
-            android:visibility="invisible"/>
+            android:background="@drawable/battle_banner"/>
         <ImageView
             android:id="@+id/img_battle_infoP1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/battle_info_p1"
-            android:visibility="invisible"/>
+            android:background="@drawable/battle_info_p1"/>
         <ImageView
             android:id="@+id/img_battle_infoP2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/battle_info_p2"
-            android:visibility="invisible"/>
+            android:background="@drawable/battle_info_p2"/>
     </RelativeLayout>
 
 </RelativeLayout>
