--- a/MyApplication_V1/app/src/main/res/layout/activity_menu.xml
+++ b/MyApplication_V1/app/src/main/res/layout/activity_menu.xml
@@ -27,7 +27,7 @@
         android:paddingBottom="@dimen/menu_text_paddingBottom"
         android:paddingStart="@dimen/menu_text_paddingStart"
         android:id="@+id/tv_menu"
-        android:text="Touch on the Screen to Start Battle..."
+        android:text="@string/menu_hint"
         android:textColor="@color/clr_menu_text"
         android:textSize="@dimen/menu_textsize"/>
 </RelativeLayout>
